tests/AbstractTests/invalid_mod_by_zero_int32.avm.expected
Return: 84
Error: [1;31mline 3:[1;33m Modulo by zero
