tests/AbstractTests/invalid_mod_by_zero_int32.avm
push int32(1)
push int32(0)
mod
exit
